--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "check your missing codeup exercises",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --prune=true --out=release-builds"
   },
   "author": "Xavier Salazar",
   "license": "MIT",
