--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
     "scrollmagic": "^2.0.5",
-    "typed.js": "^2.0.8"
+    "typed.js": "^2.0.8",
+    "web-animations-js": "^2.3.1"
   }
 }
